fix content overflow

--- a/src/scss/blocks/page-header.scss
+++ b/src/scss/blocks/page-header.scss
@@ -3,7 +3,7 @@
 
   .container {
     display: flex;
-    flex-wrap: wrap;
+    //flex-wrap: wrap;
     justify-content: space-between;
     align-items: flex-end;
 
@@ -18,6 +18,7 @@
   height: 65px;
 
   padding-top: 2px;
+  margin-right: 20px;
 
   &:hover {
     opacity: 0.8;
@@ -86,6 +87,8 @@
 }
 
 .user-nav {
+  margin-left: 20px;
+
   li:last-of-type a {
     margin-right: 0;
   }
